# SP_coursework

./: CMakeLists.txt  Makefile  README.md  calculator.cpp  calculator.h  main.cpp
bash_scripts/: top_output.txt  top_output_short.txt
bash_scripts/script_0.sh_dir/: script_0.sh
bash_scripts/script_1.sh_dir/: script_1.sh
bash_scripts/script_2.sh_dir/: script_2.sh
bash_scripts/script_3.sh_dir/: script_3.sh
bash_scripts/script_4/: clean_empty_files.sh  run_cleaner.sh
bash_scripts/script_5.sh_dir/: script_5.sh
patches/: 0001-fix-truncation-error.patch  0002-formatting-use-tabs-instead-of-spaces.patch
